// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Semantic Analysis|ToolbarSlider default 1`] = `
<div
  aria-orientation="horizontal"
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="MuiSlider-root-1 slider"
  onClick={[Function]}
  onMouseDown={[Function]}
  onTouchMove={[Function]}
  onTouchStartCapture={[Function]}
  role="slider"
>
  <div
    className="MuiSlider-container-2"
  >
    <div
      className="MuiSlider-track-3 MuiSlider-trackBefore-4"
      style={
        Object {
          "transform": "translateY(-50%) scaleX(0.5)",
        }
      }
    />
    <div
      className="MuiSlider-thumbWrapper-6"
      style={
        Object {
          "transform": "translateX(50%)",
        }
      }
    >
      <button
        className="MuiButtonBase-root-15 MuiSlider-thumb-7 MuiSlider-thumbIconWrapper-8"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        onTouchStartCapture={[Function]}
        tabIndex="0"
        type="button"
      >
        <div
          className="sliderIcon"
        >
          <p
            className="sliderText"
          >
            50
          </p>
          <img
            alt="Slider thumb icon"
            src="https://s3-eu-west-1.amazonaws.com/bluenove-assembl-images/icon-cursor-slider.svg"
          />
        </div>
      </button>
    </div>
    <div
      className="MuiSlider-track-3 MuiSlider-trackAfter-5"
      style={
        Object {
          "transform": "translateY(-50%) scaleX(0.5)",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Semantic Analysis|ToolbarSlider playground 1`] = `
<div
  aria-orientation="horizontal"
  aria-valuemax={90}
  aria-valuemin={0}
  aria-valuenow={30}
  className="MuiSlider-root-18 slider"
  onClick={[Function]}
  onMouseDown={[Function]}
  onTouchMove={[Function]}
  onTouchStartCapture={[Function]}
  role="slider"
>
  <div
    className="MuiSlider-container-19"
  >
    <div
      className="MuiSlider-track-20 MuiSlider-trackBefore-21"
      style={
        Object {
          "transform": "translateY(-50%) scaleX(0.33333333333333337)",
        }
      }
    />
    <div
      className="MuiSlider-thumbWrapper-23"
      style={
        Object {
          "transform": "translateX(33.333333333333336%)",
        }
      }
    >
      <button
        className="MuiButtonBase-root-32 MuiSlider-thumb-24 MuiSlider-thumbIconWrapper-25"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        onTouchStartCapture={[Function]}
        tabIndex="0"
        type="button"
      >
        <div
          className="sliderIcon"
        >
          <p
            className="sliderText"
          >
            30
          </p>
          <img
            alt="Slider thumb icon"
            src="https://s3-eu-west-1.amazonaws.com/bluenove-assembl-images/icon-cursor-slider.svg"
          />
        </div>
      </button>
    </div>
    <div
      className="MuiSlider-track-20 MuiSlider-trackAfter-22"
      style={
        Object {
          "transform": "translateY(-50%) scaleX(0.6666666666666665)",
        }
      }
    />
  </div>
</div>
`;
